Made some changes regarding node version of the project

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "devDependencies": {
     "turbo": "^1.10.6"
   },
-  "dependencies": {
-    "@nestjs/cli": "^10.1.0"
+  "workspaces": [
+    "apps/*"
+  ],
+  "scripts": {
+    "dev": "turbo run dev"
   }
 }
