--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,15 @@
     "pipeline": {
         "dev": {
             "cache": false
+        },
+        "build": {
+            "cache": true,
+            "dependsOn": [
+                "^build"
+            ],
+            "outputs": [
+                "dist/**"
+            ]
         }
     }
 }
