--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.3",
     "react": "^18.2.0",
